# lz-string

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  create_result.bat  main.cpp  run_test.bat  run_test.sh  test.cpp  utilities.cmake
.github/workflows/: build.yml  cd.yml  ci.yml  test.yml
benchmark_src/: benchmark.cpp
scripts/: run_benchmark.bat  run_benchmark.sh  run_test.bat  run_test.sh
sources/: lz_string.cpp
src/: lz_string.cpp  lz_string.hpp
test_js/: deno.json  main.ts
test_src/: compress_base64_tests.cpp  compress_tests.cpp  compress_uint8arr_tests.cpp  compress_uri_tests.cpp  compress_utf16_tests.cpp  decompress_base64_tests.cpp  decompress_tests.cpp  decompress_uint8arr_tests.cpp  decompress_uri_tests.cpp  decompress_utf16_tests.cpp  utilities.cpp  utilities.hpp
